--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,17 @@
 os:
   - linux
+services:
+  - mysql
 
 language: php
 
 php:
   - '7.3'
-  
+
 before_script:
   - composer self-update
   - composer install --no-interaction
-  
+  - mysql -e 'CREATE DATABASE testbinar_testing;'
+
 script:
   - vendor/bin/phpunit --coverage-text
