--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_script:
   - composer self-update
   - composer install --no-interaction
   - mysql -e 'CREATE DATABASE testbinar_testing;'
+  - cp phpunit_travis.xml phpunit.xml
 
 script:
   - vendor/bin/phpunit --coverage-text
