--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
-        "laravel/lumen-framework": "5.8.*"
+        "laravel/lumen-framework": "5.8.*",
+        "fzaninotto/faker": "^1.4"
     },
     "require-dev": {
-        "fzaninotto/faker": "^1.4",
         "phpunit/phpunit": "^7.0",
         "mockery/mockery": "^1.0"
     },
